# ReMnBWarband-Editor

./: .gitignore  Cargo.toml  README.md  R球编辑器核心技术文档.md  build.rs
.cargo/: config.toml
docs/: dev_setup.md
old_docs/: file_formats.md  item_format.md  operation_codes.md  troop_format.md  vb6_analysis.md
src/: lib.rs  main.rs
src/core/: app_manager.rs  file_manager.rs  game_detector.rs  item_manager.rs  menu_manager.rs  mod.rs  python_manager.rs  script_reader.rs  trigger_manager.rs  troop_manager.rs  validator.rs
src/core/parser/: faction_parser.rs  item_parser.rs  mod.rs  module_parser.rs  trigger_parser.rs  troop_parser.rs
src/data/: game.rs  mod.rs  models.rs  parser.rs
src/editor/: mod.rs
src/models/: faction.rs  item.rs  mod.rs  trigger.rs  troop.rs
src/ui/: mod.rs
src/utils/: constants.rs  encoding.rs  mod.rs
src/viewmodel/: app_viewmodel.rs  base.rs  faction_viewmodel.rs  item_viewmodel.rs  mod.rs  observable.rs  troop_viewmodel.rs
ui/: main.slint
ui/components/: about.slint  button.slint  card.slint  frameless-window.slint  game_directory.slint  input.slint  item-editor.slint  item_editor.slint  notification.slint  python_editor.slint  startup-card.slint  trigger_editor.slint  troop_editor.slint  welcome.slint
ui/globals/: bridges.slint  styles.slint
ui/pages/: editor.slint  main-editor.slint  startup.slint
