[package]
name = "remnb_warband_editor"
version = "0.0.1-beta"
edition = "2021"
authors = ["Flacier"]
description = "R球编辑器 - ReMnBWarband Editor"
license = "MIT"
repository = "https://github.com/fldicoahkiin/ReMnBWarband-Editor"

[dependencies]
# 核心依赖
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# UI框架
slint = "1.3"

# 文件对话框
rfd = "0.14"

# Python集成
pyo3 = { version = "0.21", features = ["auto-initialize"] }

[build-dependencies]
slint-build = "1.3"
